# NDT_data_generation

./: .gitignore  README.md
ditto/FiveG_network/: create_ditto_nodes.py  ditto_ns3_sender.py  ditto_ns3_sender_on_demand.py  omnetpp_ditto_receiver.py  setup_thetap.sh
ns3/FiveG_digital_twin/: CMakeLists.txt  FiveG_digital_twin.cc  debug-functions.cc  debug-functions.h  details.txt  metrics-calc.cc  metrics-calc.h  third_party_responder.py
omnet/FiveG_network/: FiveG_network  Makefile
omnet/FiveG_network/simulations/: .qtenvrc  Makefile  dtConnector_Links.csv  dtConnector_all_positions.txt  network_state.json  omnetpp.ini  omnetpp_avec_cbr_sender.ini  prompt.txt  sent_packet_ids.txt  useful_info.txt
omnet/FiveG_network/src/: DTConnector.cc  DTConnector.h  DTConnector.ned  FiveGApp.cc  FiveGNetwork.ned  omnetpp_ditto_sender.py  package.ned  third_party_responder.py
